--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script type="text/javascript" src="static/flexible.js"></script>
   <link rel="stylesheet" href="//at.alicdn.com/t/font_g74olmptru9xusor.css">
+  <!-- <link rel="stylesheet" href="//o79wpxyps.bkt.clouddn.com/app/swiper-3.4.2.min.css"> -->
 </head>
 <body style="background:#1a1f29;">
   <div id="app"></div>
-  <!-- <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.js"></script> -->
+  <!-- <script src="//o79wpxyps.bkt.clouddn.com/app/swiper-3.4.2.min.js"></script> -->
 </body>
 </html>
